# pyavia

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
doc/: modules.rst  pyavia.aerodynamics.rst  pyavia.core.rst  pyavia.core.solve.rst  pyavia.core.units.rst  pyavia.dynamics.rst  pyavia.fluids.rst  pyavia.misc.rst  pyavia.propulsion.rst  pyavia.rst  pyavia.structures.rst
doc/source/: conf.py  index.rst
docs/: conf.py  index.rst  pyavia.aero.rst  pyavia.core.containers.rst  pyavia.core.rst  pyavia.core.units.rst  pyavia.core.util.rst  pyavia.data.rst  pyavia.fortran.rst  pyavia.iter.rst  pyavia.prop.rst  pyavia.solve.rst  pyavia.struct.rst  pyavia.types.rst  requirements.txt
examples/: atmosphere_example.py  gasflow_example.py  gasflow_nozzle.py  gasflow_q_tables.py  scf_example.py  solve_example.py  units_example.py  wdg_example.py
examples/aero/: atmosphere_example.py  gas_example.py  gas_nozzle.py  gas_q_tables.py  gasflow_example.py
examples/aerodynamics/: atmosphere_example.py  foil_2d_rotor.py  foil_map_example.py  (+6 more)
pyavia/: __init__.py  atmosphere.py  compressible.py  containers.py  fortran.py  gasflow.py  iter.py  live_property.py  math.py  profiling.py  solve.py  state.py  states.py  type_ext.py  types.py  units.py  util.py
test/: test_aero_atmosphere.py  test_atmosphere.py  test_compressible.py  test_containers.py  test_data_interpolate.py  test_fortran.py  test_gas.py  test_live_property.py  test_solve.py  test_stress.py  test_types.py  test_units.py  test_util.py
tools/: ata-lookup.pyw
(+199 files in other folders)
