[tool.poetry]
name = "pyavia"
version = "0.0.5"
description = "A collection of commonly used tools for Aerospace Engineering."
license = "MIT"
authors = ["Eric J. Whitney"]
readme = "README.md"
homepage = "https://github.com/ericjwhitney/pyavia"
repository = "https://github.com/ericjwhitney/pyavia"
documentation = "https://pyavia.readthedocs.io/"
keywords = ["aerospace", "engineering", "tools"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- User Optional Extras -----------------------------------------------------

matplotlib = { version = "^3.9.2", optional = true }
pytest = { version = "^8.3.3", optional = true }

[tool.poetry.extras]
plot = ["matplotlib"]
test = ["pytest"]

# -- Optional Dependency Groups -----------------------------------------------

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"
pytest = "^8.3.3"

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.9.2"
pydata-sphinx-theme = "^0.15.4"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
